# MultiRobotSimulator

./: CMakeLists.txt  README.md
install/: local_setup.sh  setup.sh
install/mrsim/lib/mrsim/: simulator
install/mrsim/share/ament_index/resource_index/package_run_dependencies/: mrsim
install/mrsim/share/ament_index/resource_index/parent_prefix_path/: mrsim
install/mrsim/share/mrsim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh
install/mrsim/share/mrsim/cmake/: mrsimConfig-version.cmake  mrsimConfig.cmake
install/mrsim/share/mrsim/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/: car.cpp  car.h  robot.h  simple_geometry.h  simple_simulator_test.cpp  world.h
v1/: CMakeLists.txt
v1/src/: robot.cpp  robot.h  simple_simulator_test.cpp  test_manu.cpp  world.cpp  world.h
v2/: CMakeLists.txt
v2/configs/: 1.json
v2/src/: arm.cpp  arm.h  car.cpp  freeflying.cpp  freeflying.h  object.cpp  object.h  simple_geometry.h  simulator.cpp  world.h
v3/: CMakeLists.txt
v3/configs/: 1.json
v3/src/: arm.cpp  arm.h  freeflying.cpp  freeflying.h  object.cpp  simulator.cpp  utils.h  world.cpp  world.h
v4/: CMakeLists.txt
v4/configs/: 1 copy.json  1.json
v4/src/: arm.cpp  car.h  simulator.cpp  utils.h
v5/: README.md
v5/install/: local_setup.sh  setup.sh
v5/install/mrsim/lib/mrsim/: simulator
v5/install/mrsim/share/ament_index/resource_index/package_run_dependencies/: mrsim
v5/install/mrsim/share/ament_index/resource_index/parent_prefix_path/: mrsim
v5/install/mrsim/share/mrsim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
v5/install/mrsim/share/mrsim/cmake/: mrsimConfig-version.cmake  mrsimConfig.cmake
v5/install/mrsim/share/mrsim/environment/: ament_prefix_path.dsv  path.dsv
v5/log/: latest_build  latest_list
v5/src/mrsim/: CMakeLists.txt  package.xml
v5/src/mrsim/configs/: 1.json  2.json  3.json  4.json
v5/src/mrsim/include/mrsim/: arm.h  car.h  freeflying.h  object.h  ros_bridge.h  sim_common.h  utils.h
v5/src/mrsim/rankings/: ranking.json
v5/src/mrsim/src/: arm.cpp  car.cpp  freeflying.cpp  lidar.cpp  object.cpp  ros_bridge.cpp  simulator.cpp  utils.cpp  world.cpp
