<package format="3">
  <name>mrsim</name>
  <version>0.0.1</version>
  <description>Mobile robot simulator with ROS 2 bridge</description>

  <maintainer email="rucci.2053183@studenti.uniroma.it">Manu_kick__</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>opencv</exec_depend>
</package>
